ran training for improvement to padding

--- a/code/train_model.ipynb
+++ b/code/train_model.ipynb
@@ -112,10 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6d1b68b6-e95a-45d7-97d1-df98d456535d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train dataset has 45000 images\n",
+      " val dataset has 15000 images\n",
+      " test dataset has 4952 images\n"
+     ]
+    }
+   ],
    "source": [
     "root = Path('../Datasets/coco')\n",
     "imgs_path = root/'images'/'train2017'\n",
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "644a4dc6-0e99-4b86-b2bf-2d376f2f09e7",
    "metadata": {},
    "outputs": [],
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1f8baa40-b22f-4c9d-a445-c311eb3c190b",
    "metadata": {},
    "outputs": [],
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "678bc463-7410-4bfe-bada-adb3beb89559",
    "metadata": {},
    "outputs": [],
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b7e8a532-f6f7-42ff-840f-c5655e79c874",
    "metadata": {},
    "outputs": [],
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d48931ad-e9a8-4572-af11-0463772d6270",
    "metadata": {},
    "outputs": [],
@@ -265,10 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d42d3799-d7cf-4356-b74b-872123d114a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../model/image_captioning_model_v10.pth file does not exist, training startging from scratch\n"
+     ]
+    }
+   ],
    "source": [
     "if Path(CHECKPOINT).exists():\n",
     "    encoder, decoder, training_loss, validation_loss, hyper_params = load_model(encoder, decoder, CHECKPOINT)\n",
@@ -291,7 +309,36 @@
    "execution_count": null,
    "id": "e270b0f5-fe3c-4137-be4a-da8b85a575c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: [0/7032]       || Average Training Loss: 9.2295\n",
+      "Step: [300/7032]     || Average Training Loss: 4.2770\n",
+      "Step: [600/7032]     || Average Training Loss: 4.0079\n",
+      "Step: [900/7032]     || Average Training Loss: 3.8607\n",
+      "Step: [1200/7032]    || Average Training Loss: 3.7686\n",
+      "Step: [1500/7032]    || Average Training Loss: 3.7091\n",
+      "Step: [1800/7032]    || Average Training Loss: 3.6620\n",
+      "Step: [2100/7032]    || Average Training Loss: 3.6287\n",
+      "Step: [2400/7032]    || Average Training Loss: 3.5998\n",
+      "Step: [2700/7032]    || Average Training Loss: 3.5802\n",
+      "Step: [3000/7032]    || Average Training Loss: 3.5625\n",
+      "Step: [3300/7032]    || Average Training Loss: 3.5459\n",
+      "Step: [3600/7032]    || Average Training Loss: 3.5339\n",
+      "Step: [3900/7032]    || Average Training Loss: 3.5216\n",
+      "Step: [4200/7032]    || Average Training Loss: 3.5121\n",
+      "Step: [4500/7032]    || Average Training Loss: 3.5034\n",
+      "Step: [4800/7032]    || Average Training Loss: 3.4935\n",
+      "Step: [5100/7032]    || Average Training Loss: 3.4864\n",
+      "Step: [5400/7032]    || Average Training Loss: 3.4795\n",
+      "Step: [5700/7032]    || Average Training Loss: 3.4734\n",
+      "Step: [6000/7032]    || Average Training Loss: 3.4673\n",
+      "Step: [6300/7032]    || Average Training Loss: 3.4608\n"
+     ]
+    }
+   ],
    "source": [
     "train_params = {\n",
     "    'device': device,\n",
@@ -302,6 +349,7 @@
     "    'train_loader': train_dl,\n",
     "    'val_loader': val_dl,\n",
     "    'total_epoch': TOTAL_EPOCH,\n",
+    "    'hyper_params': hyper_params,\n",
     "    'training_loss': training_loss,\n",
     "    'validation_loss': validation_loss,\n",
     "    'checkpoint_path': CHECKPOINT,\n",
@@ -309,48 +357,6 @@
     "}\n",
     "\n",
     "training_loss, validation_loss = train(**train_params) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1aadc3e6-a77e-4662-8f42-12e0258e77f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch = next(iter(train_dl))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "faa66fde-7aae-4246-a2be-da634d9925e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for b in batch:\n",
-    "    print(type(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3188f79a-904e-4443-a8db-4f41f6d9c3d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "capts = [1,2,3,4,5]\n",
-    "torch.Tensor(capts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98ae6c7a-fefd-4429-ac9f-df81eacd62ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.cat?"
    ]
   },
   {
