Add some documnetations

--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ff24f55",
+   "metadata": {},
+   "source": [
+    "In this notebook, we will run models, also this notebook can be a template to run other models with different hyperparameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78d7767e",
    "metadata": {},
    "source": [
-    "## import libraries"
+    "## Import libraries"
    ]
   },
   {
@@ -51,7 +59,6 @@
     "captions_path = '../../Data/annotations/captions_train2017.json'\n",
     "freq_threshold = 5\n",
     "caps_per_image = 5\n",
-    "batch_size = 32\n",
     "shuffle = True"
    ]
   },
@@ -88,7 +95,10 @@
     "    'word2idx': train_dataset.vocab.word2idx\n",
     "}\n",
     "\n",
-    "val_loader, val_dataset = get_loader(**val_loader_params)"
+    "val_loader, val_dataset = get_loader(**val_loader_params)\n",
+    "\n",
+    "print(f\"Lenght of training dataloader: {len(train_dataset)}, Lenght of testing dataloader: {len(val_loader)}\")\n",
+    "print(f\"Lenght of vocabulary: {len(train_dataset.vocab.idx2word)}\")"
    ]
   },
   {
@@ -102,32 +112,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "52e2414b-169f-498f-b157-f05df03529fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3387"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_dataset.vocab.idx2word)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cacb037c",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Load the model"
    ]
   },
   {
@@ -137,7 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"We are using {device}.\")"
    ]
   },
   {
@@ -149,12 +139,12 @@
    "source": [
     "# for data loader\n",
     "BATCH_SIZE = 32\n",
-    "CAPS_PER_IMAGE = 5 # how many captions for each image to include in data set\n",
+    "CAPS_PER_IMAGE = 5  # how many captions for each image to include in data set\n",
     "\n",
     "# for encoder and decoder\n",
-    "EMBED_SIZE = 512 # dimension of vocab embedding vector\n",
+    "EMBED_SIZE = 512  # dimension of vocab embedding vector\n",
     "HIDDEN_SIZE = 512\n",
-    "NUM_LAYERS = 1 #hidden layers in LTSM\n",
+    "NUM_LAYERS = 1  # hidden layers in LTSM\n",
     "vocab_size = len(train_dataset.vocab.idx2word)\n",
     "\n",
     "# training parameters\n",
@@ -199,7 +189,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_params('../model/model_v2/model_v2_0_param.json', 32, 512, 512, 1, len(train_dataset.vocab.idx2word))"
+    "model_params = {\n",
+    "    'path': '../model/model_v2/model_v2_0_param.json',\n",
+    "    'batch_size': BATCH_SIZE,\n",
+    "    'embed_size': EMBED_SIZE,\n",
+    "    'hidden_size': HIDDEN_SIZE,\n",
+    "    'num_layers': NUM_LAYERS,\n",
+    "    'vocab_size': len(train_dataset.vocab.idx2word)\n",
+    "}\n",
+    "\n",
+    "save_params(**model_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45158cda",
+   "metadata": {},
+   "source": [
+    "## Training"
    ]
   },
   {
@@ -693,17 +700,7 @@
    "id": "0ec0a2c2-8bf7-4a91-9ebb-ffe9601c1ef4",
    "metadata": {},
    "source": [
-    "## try with different hyperparamters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "b3cecb05-3032-4637-807d-ca57b87d8bab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_params('../model/model_v2/model_v2_1_param.json', 128, 1024, 512, 3, len(train_dataset.vocab.idx2word))"
+    "## Try with different hyperparamters"
    ]
   },
   {
@@ -727,6 +724,25 @@
     "TOTAL_EPOCH = 1000\n",
     "CHECKPOINT = '../model/model_v2/model_v2_1.pth'\n",
     "PRINT_EVERY = 500 # run print_every batches and then"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3017d8de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_params = {\n",
+    "    'path': '../model/model_v2/model_v2_1_param.json',\n",
+    "    'batch_size': BATCH_SIZE,\n",
+    "    'embed_size': EMBED_SIZE,\n",
+    "    'hidden_size': HIDDEN_SIZE,\n",
+    "    'num_layers': NUM_LAYERS,\n",
+    "    'vocab_size': len(train_dataset.vocab.idx2word)\n",
+    "}\n",
+    "\n",
+    "save_params(**model_params)"
    ]
   },
   {
@@ -1368,7 +1384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
