--- a/code/eval.ipynb
+++ b/code/eval.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "20d399c5",
+   "metadata": {},
+   "source": [
+    "# Evaluate the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "183fe9d9",
+   "metadata": {},
+   "source": [
+    "## Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "70e1d711-95a2-4c2c-a42c-9f85aac95f92",
@@ -29,8 +45,8 @@
     "word2idx_path = '../vocabulary/word2idx.json'\n",
     "freq_threshold = 5\n",
     "caps_per_image = 1\n",
-    "batch_size = 32\n",
-    "shuffle = True\n",
+    "batch_size = 1\n",
+    "shuffle = False\n",
     "mode = 'test'"
    ]
   },
@@ -41,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the vocabs\n",
     "idx2word, word2idx = load_vocab(idx2word_path, word2idx_path)"
    ]
   },
@@ -55,36 +72,18 @@
     "    'images_path': image_path,\n",
     "    'captions_path': captions_path,\n",
     "    'freq_threshold': freq_threshold,\n",
-    "    'caps_per_image': 1,\n",
-    "    'batch_size': 1,\n",
+    "    'caps_per_image': caps_per_image,\n",
+    "    'batch_size': batch_size1,\n",
     "    'shuffle': shuffle,\n",
     "    'mode': mode,\n",
     "    'idx2word': idx2word,\n",
     "    'word2idx': word2idx\n",
     "}\n",
     "\n",
-    "test_loader, test_dataset = get_loader(**test_loader_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f0ebbbe5-9421-4b34-8429-e46d10151418",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2000"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(test_loader)"
+    "test_loader, test_dataset = get_loader(**test_loader_params)\n",
+    "\n",
+    "print(f\"Lenght of testing dataloader: {len(test_loader)}.\")\n",
+    "print(f\"Lenght of vocabulary: {len(test_dataset.vocab.idx2word)}\")"
    ]
   },
   {
@@ -94,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"We are using {device}.\")"
    ]
   },
   {
@@ -117,31 +117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8716e655-22f2-437a-88b9-55bf975315be",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'batch_size': 32,\n",
-       " 'embed_size': 512,\n",
-       " 'hidden_size': 512,\n",
-       " 'num_layers': 1,\n",
-       " 'vocab_size': 3387}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param_1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "147a25a9-d23b-4389-b64e-65c4d42c5e58",
    "metadata": {},
@@ -160,16 +135,12 @@
     }
    ],
    "source": [
-    "# for data loader\n",
-    "BATCH_SIZE = 1\n",
-    "\n",
     "# for encoder and decoder\n",
     "EMBED_SIZE = param_1['embed_size'] # dimension of vocab embedding vector\n",
     "HIDDEN_SIZE = param_1['hidden_size']\n",
     "NUM_LAYERS = param_1['num_layers'] #hidden layers in LTSM\n",
     "vocab_size = param_1['vocab_size']\n",
     "\n",
-    "TOTAL_EPOCH = 15\n",
     "CHECKPOINT = '../model/model_v2/model_v2_0.pth'\n",
     "\n",
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
@@ -214,13 +185,15 @@
    ],
    "source": [
     "idx, images, captions = next(iter(test_loader))\n",
-    "img = Image.open(image_path+'/'+test_dataset.img_deque[idx[0]][0]).convert('RGB')\n",
+    "img = test_dataset.get_img(idx[0])\n",
     "plt.imshow(img)\n",
     "hypo = predict(encoder, decoder, img, test_dataset.vocab.idx2word, test_dataset.vocab.word2idx,device)\n",
     "references = test_dataset.get_captions(test_dataset.img_deque[idx[0]][0])\n",
+    "\n",
+    "print(f\"Predicted caption: {hypo}\")\n",
     "print(\"Original Captions:\")\n",
-    "for ref in references:\n",
-    "    print(ref)"
+    "for i in range(len(references)):\n",
+    "    print(f\"{i}. {references[i]}\")"
    ]
   },
   {
@@ -243,7 +216,15 @@
     }
    ],
    "source": [
-    "b1_avg, b2_avg, b3_avg, b4_avg = evaluate_bleu_score(encoder, decoder, test_loader, test_dataset, device)"
+    "# Evaluate the model using BLEU Scores\n",
+    "evaluation_params = {\n",
+    "    'encoder': encoder,\n",
+    "    'decoder': decoder,\n",
+    "    'loader': test_loader, \n",
+    "    'dataset': test_dataset,\n",
+    "    'device': device\n",
+    "}\n",
+    "b1_avg, b2_avg, b3_avg, b4_avg = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -289,31 +270,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fb789db1-9170-4cd4-82e1-676abf327db3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'batch_size': 128,\n",
-       " 'embed_size': 1024,\n",
-       " 'hidden_size': 512,\n",
-       " 'num_layers': 3,\n",
-       " 'vocab_size': 3387}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "param_2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "id": "d17fe61d-7a4d-4817-951d-b94ab4fa09e3",
    "metadata": {},
@@ -342,7 +298,9 @@
     "\n",
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
+    "\n",
     "epoch, encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
+    "\n",
     "plot_loss(training_loss, validation_loss)"
    ]
   },
@@ -380,13 +338,15 @@
    ],
    "source": [
     "idx, images, captions = next(iter(test_loader))\n",
-    "img = Image.open(image_path+'/'+test_dataset.img_deque[idx[0]][0]).convert('RGB')\n",
+    "img = test_dataset.get_img(idx[0])\n",
     "plt.imshow(img)\n",
     "hypo = predict(encoder, decoder, img, test_dataset.vocab.idx2word, test_dataset.vocab.word2idx,device)\n",
     "references = test_dataset.get_captions(test_dataset.img_deque[idx[0]][0])\n",
+    "\n",
+    "print(f\"Predicted caption: {hypo}\")\n",
     "print(\"Original Captions:\")\n",
-    "for ref in references:\n",
-    "    print(ref)"
+    "for i in range(len(references)):\n",
+    "    print(f\"{i}. {references[i]}\")"
    ]
   },
   {
@@ -409,7 +369,15 @@
     }
    ],
    "source": [
-    "b1_avg, b2_avg, b3_avg, b4_avg = evaluate_bleu_score(encoder, decoder, test_loader, test_dataset, device)"
+    "# Evaluate the model using BLEU Scores\n",
+    "evaluation_params = {\n",
+    "    'encoder': encoder,\n",
+    "    'decoder': decoder,\n",
+    "    'loader': test_loader, \n",
+    "    'dataset': test_dataset,\n",
+    "    'device': device\n",
+    "}\n",
+    "b1_avg, b2_avg, b3_avg, b4_avg = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -452,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
