--- a/code/eval.ipynb
+++ b/code/eval.ipynb
@@ -146,9 +146,9 @@
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
     "\n",
-    "epoch, encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
+    "epoch, encoder, decoder, training_loss_0, validation_loss_0 = load_model(encoder, decoder, CHECKPOINT)\n",
     "\n",
-    "plot_loss(training_loss, validation_loss)"
+    "plot_loss(training_loss_0, validation_loss_0)"
    ]
   },
   {
@@ -224,7 +224,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1_avg, b2_avg, b3_avg, b4_avg = evaluate_bleu_score(**evaluation_params)"
+    "b1_avg_0, b2_avg_0, b3_avg_0, b4_avg_0 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "plot_bleu_score_bar(b1_avg, b2_avg, b3_avg, b4_avg)"
+    "plot_bleu_score_bar(b1_avg_0, b2_avg_0, b3_avg_0, b4_avg_0)"
    ]
   },
   {
@@ -299,9 +299,9 @@
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
     "\n",
-    "epoch, encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
+    "epoch, encoder, decoder, training_loss_1, validation_loss_1 = load_model(encoder, decoder, CHECKPOINT)\n",
     "\n",
-    "plot_loss(training_loss, validation_loss)"
+    "plot_loss(training_loss_1, validation_loss_1)"
    ]
   },
   {
@@ -377,7 +377,7 @@
     "    'dataset': test_dataset,\n",
     "    'device': device\n",
     "}\n",
-    "b1_avg, b2_avg, b3_avg, b4_avg = evaluate_bleu_score(**evaluation_params)"
+    "b1_avg_1, b2_avg_1, b3_avg_1, b4_avg_1 = evaluate_bleu_score(**evaluation_params)"
    ]
   },
   {
@@ -400,7 +400,39 @@
     }
    ],
    "source": [
-    "plot_bleu_score_bar(b1_avg, b2_avg, b3_avg, b4_avg)"
+    "plot_bleu_score_bar(b1_avg_1, b2_avg_1, b3_avg_1, b4_avg_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46537ce",
+   "metadata": {},
+   "source": [
+    "## Comparing the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f60de8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_losses = [training_loss_0, training_loss_1]\n",
+    "validation_losses = [validation_loss_0, validation_loss_1]\n",
+    "\n",
+    "compare_models_losses_(training_losses, validation_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f483413c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bleu_scores = [ [b1_avg_0, b2_avg_0, b3_avg_0, b4_avg_0], [b1_avg_1, b2_avg_1, b3_avg_1, b4_avg_1]]\n",
+    "comparing_bleu_scores(bleu_scores)"
    ]
   }
  ],
