some changes on the save/load methods in the utils functions

--- a/code/eval.ipynb
+++ b/code/eval.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_1 = load_params('../model/model_v2/model_v2_0_param.json')"
+    "param_1 = load_params('../model/model_v2')"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "NUM_LAYERS = param_1['num_layers'] #hidden layers in LTSM\n",
     "vocab_size = param_1['vocab_size']\n",
     "\n",
-    "CHECKPOINT = '../model/model_v2/model_v2_0.pth'\n",
+    "CHECKPOINT = '../model/model_v2'\n",
     "\n",
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_2 = load_params('../model/model_v2/model_v2_1_param.json')"
+    "param_2 = load_params('../model/model_v3')"
    ]
   },
   {
@@ -294,7 +294,7 @@
     "NUM_LAYERS = param_2['num_layers'] #hidden layers in LTSM\n",
     "vocab_size = param_2['vocab_size']\n",
     "\n",
-    "CHECKPOINT = '../model/model_v2/model_v2_1.pth'\n",
+    "CHECKPOINT = '../model/model_v3'\n",
     "\n",
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
