--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -149,7 +149,8 @@
     "\n",
     "# training parameters\n",
     "TOTAL_EPOCH = 1000\n",
-    "CHECKPOINT = '../model/model_v2/model_v2_0.pth'\n",
+    "#CHECKPOINT = '../model/model_v2/model_v2_0.pth'\n",
+    "CHECKPOINT = '../model/model_v2'\n",
     "PRINT_EVERY = 500 # run print_every batches and then"
    ]
   },
@@ -190,7 +191,7 @@
    "outputs": [],
    "source": [
     "model_params = {\n",
-    "    'path': '../model/model_v2/model_v2_0_param.json',\n",
+    "    'path': '../model/model_v2',\n",
     "    'batch_size': BATCH_SIZE,\n",
     "    'embed_size': EMBED_SIZE,\n",
     "    'hidden_size': HIDDEN_SIZE,\n",
@@ -722,7 +723,7 @@
     "\n",
     "# training parameters\n",
     "TOTAL_EPOCH = 1000\n",
-    "CHECKPOINT = '../model/model_v2/model_v2_1.pth'\n",
+    "CHECKPOINT = '../model/model_v3'\n",
     "PRINT_EVERY = 500 # run print_every batches and then"
    ]
   },
@@ -734,7 +735,7 @@
    "outputs": [],
    "source": [
     "model_params = {\n",
-    "    'path': '../model/model_v2/model_v2_1_param.json',\n",
+    "    'path': '../model/model_v3',\n",
     "    'batch_size': BATCH_SIZE,\n",
     "    'embed_size': EMBED_SIZE,\n",
     "    'hidden_size': HIDDEN_SIZE,\n",
