--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4d2ab890",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,77 @@
       "Epoch: [0/10] || Training Loss = 3.46 || Validation Loss: 3.15 || Time: 14.850750\n",
       "****************************************************************************************************\n",
       "Epoch: [1/10] || Step: [0/1563] || Average Training Loss: 3.0344\n",
-      "Epoch: [1/10] || Step: [500/1563] || Average Training Loss: 3.2017\n"
+      "Epoch: [1/10] || Step: [500/1563] || Average Training Loss: 3.2017\n",
+      "Epoch: [1/10] || Step: [1000/1563] || Average Training Loss: 3.1969\n",
+      "Epoch: [1/10] || Step: [1500/1563] || Average Training Loss: 3.1911\n",
+      "Epoch: [1/10] || Step: [0/188] || Average Validation Loss: 2.9978\n",
+      "****************************************************************************************************\n",
+      "Epoch: [1/10] || Training Loss = 3.19 || Validation Loss: 3.09 || Time: 15.559770\n",
+      "****************************************************************************************************\n",
+      "Epoch: [2/10] || Step: [0/1563] || Average Training Loss: 3.2785\n",
+      "Epoch: [2/10] || Step: [500/1563] || Average Training Loss: 3.1744\n",
+      "Epoch: [2/10] || Step: [1000/1563] || Average Training Loss: 3.1754\n",
+      "Epoch: [2/10] || Step: [1500/1563] || Average Training Loss: 3.1781\n",
+      "Epoch: [2/10] || Step: [0/188] || Average Validation Loss: 2.9644\n",
+      "****************************************************************************************************\n",
+      "Epoch: [2/10] || Training Loss = 3.18 || Validation Loss: 3.09 || Time: 14.568631\n",
+      "****************************************************************************************************\n",
+      "Epoch: [3/10] || Step: [0/1563] || Average Training Loss: 3.5444\n",
+      "Epoch: [3/10] || Step: [500/1563] || Average Training Loss: 3.1635\n",
+      "Epoch: [3/10] || Step: [1000/1563] || Average Training Loss: 3.1629\n",
+      "Epoch: [3/10] || Step: [1500/1563] || Average Training Loss: 3.1609\n",
+      "Epoch: [3/10] || Step: [0/188] || Average Validation Loss: 2.9835\n",
+      "****************************************************************************************************\n",
+      "Epoch: [3/10] || Training Loss = 3.16 || Validation Loss: 3.06 || Time: 11.244599\n",
+      "****************************************************************************************************\n",
+      "Epoch: [4/10] || Step: [0/1563] || Average Training Loss: 3.2275\n",
+      "Epoch: [4/10] || Step: [500/1563] || Average Training Loss: 3.1555\n",
+      "Epoch: [4/10] || Step: [1000/1563] || Average Training Loss: 3.1467\n",
+      "Epoch: [4/10] || Step: [1500/1563] || Average Training Loss: 3.1431\n",
+      "Epoch: [4/10] || Step: [0/188] || Average Validation Loss: 3.2624\n",
+      "****************************************************************************************************\n",
+      "Epoch: [4/10] || Training Loss = 3.14 || Validation Loss: 3.06 || Time: 12.584878\n",
+      "****************************************************************************************************\n",
+      "Epoch: [5/10] || Step: [0/1563] || Average Training Loss: 3.2303\n",
+      "Epoch: [5/10] || Step: [500/1563] || Average Training Loss: 3.1283\n",
+      "Epoch: [5/10] || Step: [1000/1563] || Average Training Loss: 3.1332\n",
+      "Epoch: [5/10] || Step: [1500/1563] || Average Training Loss: 3.1327\n",
+      "Epoch: [5/10] || Step: [0/188] || Average Validation Loss: 3.2068\n",
+      "****************************************************************************************************\n",
+      "Epoch: [5/10] || Training Loss = 3.13 || Validation Loss: 3.06 || Time: 11.032440\n",
+      "****************************************************************************************************\n",
+      "Epoch: [6/10] || Step: [0/1563] || Average Training Loss: 2.8839\n",
+      "Epoch: [6/10] || Step: [500/1563] || Average Training Loss: 3.1190\n",
+      "Epoch: [6/10] || Step: [1000/1563] || Average Training Loss: 3.1215\n",
+      "Epoch: [6/10] || Step: [1500/1563] || Average Training Loss: 3.1245\n",
+      "Epoch: [6/10] || Step: [0/188] || Average Validation Loss: 3.1537\n",
+      "****************************************************************************************************\n",
+      "Epoch: [6/10] || Training Loss = 3.12 || Validation Loss: 3.04 || Time: 14.552815\n",
+      "****************************************************************************************************\n",
+      "Epoch: [7/10] || Step: [0/1563] || Average Training Loss: 3.3968\n",
+      "Epoch: [7/10] || Step: [500/1563] || Average Training Loss: 3.1164\n",
+      "Epoch: [7/10] || Step: [1000/1563] || Average Training Loss: 3.1138\n",
+      "Epoch: [7/10] || Step: [1500/1563] || Average Training Loss: 3.1165\n",
+      "Epoch: [7/10] || Step: [0/188] || Average Validation Loss: 3.0908\n",
+      "****************************************************************************************************\n",
+      "Epoch: [7/10] || Training Loss = 3.12 || Validation Loss: 3.04 || Time: 12.808037\n",
+      "****************************************************************************************************\n",
+      "Epoch: [8/10] || Step: [0/1563] || Average Training Loss: 3.2101\n",
+      "Epoch: [8/10] || Step: [500/1563] || Average Training Loss: 3.1075\n",
+      "Epoch: [8/10] || Step: [1000/1563] || Average Training Loss: 3.1121\n",
+      "Epoch: [8/10] || Step: [1500/1563] || Average Training Loss: 3.1156\n",
+      "Epoch: [8/10] || Step: [0/188] || Average Validation Loss: 3.1771\n",
+      "****************************************************************************************************\n",
+      "Epoch: [8/10] || Training Loss = 3.11 || Validation Loss: 3.03 || Time: 11.031873\n",
+      "****************************************************************************************************\n",
+      "Epoch: [9/10] || Step: [0/1563] || Average Training Loss: 3.1480\n",
+      "Epoch: [9/10] || Step: [500/1563] || Average Training Loss: 3.1066\n",
+      "Epoch: [9/10] || Step: [1000/1563] || Average Training Loss: 3.1101\n",
+      "Epoch: [9/10] || Step: [1500/1563] || Average Training Loss: 3.1075\n",
+      "Epoch: [9/10] || Step: [0/188] || Average Validation Loss: 3.1683\n",
+      "****************************************************************************************************\n",
+      "Epoch: [9/10] || Training Loss = 3.11 || Validation Loss: 3.03 || Time: 11.030580\n",
+      "****************************************************************************************************\n"
      ]
     }
    ],
@@ -302,10 +372,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3017d8de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m model_params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../model/model_v2/model_v2_1_param.json\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: BATCH_SIZE,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_size\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mlen\u001b[39m(train_dataset\u001b[38;5;241m.\u001b[39mvocab\u001b[38;5;241m.\u001b[39midx2word)\n\u001b[1;32m      8\u001b[0m }\n\u001b[0;32m---> 10\u001b[0m \u001b[43msave_params\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmodel_params\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/INM706-image-captioning/code/utils.py:248\u001b[0m, in \u001b[0;36msave_params\u001b[0;34m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size)\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_params\u001b[39m(path, batch_size, embed_size, hidden_size, num_layers, vocab_size):\n\u001b[1;32m    241\u001b[0m     params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    242\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m: batch_size,\n\u001b[1;32m    243\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124membed_size\u001b[39m\u001b[38;5;124m'\u001b[39m: embed_size,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvocab_size\u001b[39m\u001b[38;5;124m'\u001b[39m: vocab_size\n\u001b[1;32m    247\u001b[0m     }\n\u001b[0;32m--> 248\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m outfile:\n\u001b[1;32m    249\u001b[0m         json\u001b[38;5;241m.\u001b[39mdump(params, outfile)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../model/model_v2/model_v2_1_param.json'"
+     ]
+    }
+   ],
    "source": [
     "model_params = {\n",
     "    'path': '../model/model_v2/model_v2_1_param.json',\n",
