Change some paths

--- a/code/eval.ipynb
+++ b/code/eval.ipynb
@@ -73,7 +73,7 @@
     "    'captions_path': captions_path,\n",
     "    'freq_threshold': freq_threshold,\n",
     "    'caps_per_image': caps_per_image,\n",
-    "    'batch_size': batch_size1,\n",
+    "    'batch_size': batch_size,\n",
     "    'shuffle': shuffle,\n",
     "    'mode': mode,\n",
     "    'idx2word': idx2word,\n",
@@ -82,8 +82,8 @@
     "\n",
     "test_loader, test_dataset = get_loader(**test_loader_params)\n",
     "\n",
-    "print(f\"Lenght of testing dataloader: {len(test_loader)}.\")\n",
-    "print(f\"Lenght of vocabulary: {len(test_dataset.vocab.idx2word)}\")"
+    "print(f\"Length of testing dataloader: {len(test_loader)}.\")\n",
+    "print(f\"Length of vocabulary: {len(test_dataset.vocab.idx2word)}\")"
    ]
   },
   {
@@ -112,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_1 = load_params('../model/model_v2')"
+    "CHECKPOINT = '../model/model_v1'\n",
+    "param_1 = load_params(CHECKPOINT)"
    ]
   },
   {
@@ -140,8 +141,6 @@
     "HIDDEN_SIZE = param_1['hidden_size']\n",
     "NUM_LAYERS = param_1['num_layers'] #hidden layers in LTSM\n",
     "vocab_size = param_1['vocab_size']\n",
-    "\n",
-    "CHECKPOINT = '../model/model_v2'\n",
     "\n",
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
@@ -265,7 +264,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_2 = load_params('../model/model_v3')"
+    "CHECKPOINT = '../model/model_v2'\n",
+    "param_2 = load_params(CHECKPOINT)"
    ]
   },
   {
@@ -293,8 +293,6 @@
     "HIDDEN_SIZE = param_2['hidden_size']\n",
     "NUM_LAYERS = param_2['num_layers'] #hidden layers in LTSM\n",
     "vocab_size = param_2['vocab_size']\n",
-    "\n",
-    "CHECKPOINT = '../model/model_v3'\n",
     "\n",
     "encoder = Encoder(embed_size=EMBED_SIZE, pretrained=True)\n",
     "decoder = Decoder(embed_size=EMBED_SIZE, hidden_size=HIDDEN_SIZE, vocab_size=vocab_size, num_layers=NUM_LAYERS)\n",
@@ -418,10 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_losses = [training_loss_0, training_loss_1]\n",
-    "validation_losses = [validation_loss_0, validation_loss_1]\n",
-    "\n",
-    "compare_models_losses_(training_losses, validation_losses)"
+    "model_paths = ['../model/model_v1', '../model/model_v2']\n",
+    "compare_models_losses(model_paths)"
    ]
   },
   {
