looks like code is running

--- a/code/khalil_to_check.ipynb
+++ b/code/khalil_to_check.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "523632e5",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
     "NUM_LAYERS = 1  # hidden layers in LTSM\n",
     "\n",
     "# training parameters\n",
-    "TOTAL_EPOCH = 10\n",
+    "TOTAL_EPOCH = 1\n",
     "CHECKPOINT = '../model/model_v1'\n",
     "\n",
     "PRINT_EVERY = 500 # run print_every batches and then"
@@ -130,13 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "503f98fa-8228-4a0e-b522-866f4052ab0a",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(f'../vocabulary/{CAPTIONS_NAME}word2idx.json', 'r') as f:\n",
-    "    word2idx = json.load(f)"
+    "    word2idx = json.load(f)\n",
+    "vocab_size = len(word2idx)"
    ]
   },
   {
@@ -251,26 +252,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5622d7ab-d04b-4d5e-ae2a-fb323979833e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset.vocab.export_vocab('../vocabulary')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e031a3e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab_size = len(train_dataset.vocab.idx2word)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cacb037c",
    "metadata": {},
@@ -280,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a492102f",
    "metadata": {},
    "outputs": [
@@ -299,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e2b4ebad",
    "metadata": {},
    "outputs": [],
@@ -310,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "673155db",
    "metadata": {},
    "outputs": [],
@@ -328,13 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "ed65aa52-7d2c-434e-b317-e3619bc82a97",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_params = {\n",
-    "    'path': CHECKPOINT,\n",
+    "    'save_path': CHECKPOINT,\n",
     "    'batch_size': BATCH_SIZE,\n",
     "    'embed_size': EMBED_SIZE,\n",
     "    'hidden_size': HIDDEN_SIZE,\n",
@@ -355,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4d2ab890",
    "metadata": {},
    "outputs": [
@@ -363,86 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0/10] || Step: [0/1563] || Average Training Loss: 8.1324\n",
-      "Epoch: [0/10] || Step: [500/1563] || Average Training Loss: 3.8319\n",
-      "Epoch: [0/10] || Step: [1000/1563] || Average Training Loss: 3.5866\n",
-      "Epoch: [0/10] || Step: [1500/1563] || Average Training Loss: 3.4698\n",
-      "Epoch: [0/10] || Step: [0/188] || Average Validation Loss: 3.2409\n",
-      "****************************************************************************************************\n",
-      "Epoch: [0/10] || Training Loss = 3.46 || Validation Loss: 3.15 || Time: 14.850750\n",
-      "****************************************************************************************************\n",
-      "Epoch: [1/10] || Step: [0/1563] || Average Training Loss: 3.0344\n",
-      "Epoch: [1/10] || Step: [500/1563] || Average Training Loss: 3.2017\n",
-      "Epoch: [1/10] || Step: [1000/1563] || Average Training Loss: 3.1969\n",
-      "Epoch: [1/10] || Step: [1500/1563] || Average Training Loss: 3.1911\n",
-      "Epoch: [1/10] || Step: [0/188] || Average Validation Loss: 2.9978\n",
-      "****************************************************************************************************\n",
-      "Epoch: [1/10] || Training Loss = 3.19 || Validation Loss: 3.09 || Time: 15.559770\n",
-      "****************************************************************************************************\n",
-      "Epoch: [2/10] || Step: [0/1563] || Average Training Loss: 3.2785\n",
-      "Epoch: [2/10] || Step: [500/1563] || Average Training Loss: 3.1744\n",
-      "Epoch: [2/10] || Step: [1000/1563] || Average Training Loss: 3.1754\n",
-      "Epoch: [2/10] || Step: [1500/1563] || Average Training Loss: 3.1781\n",
-      "Epoch: [2/10] || Step: [0/188] || Average Validation Loss: 2.9644\n",
-      "****************************************************************************************************\n",
-      "Epoch: [2/10] || Training Loss = 3.18 || Validation Loss: 3.09 || Time: 14.568631\n",
-      "****************************************************************************************************\n",
-      "Epoch: [3/10] || Step: [0/1563] || Average Training Loss: 3.5444\n",
-      "Epoch: [3/10] || Step: [500/1563] || Average Training Loss: 3.1635\n",
-      "Epoch: [3/10] || Step: [1000/1563] || Average Training Loss: 3.1629\n",
-      "Epoch: [3/10] || Step: [1500/1563] || Average Training Loss: 3.1609\n",
-      "Epoch: [3/10] || Step: [0/188] || Average Validation Loss: 2.9835\n",
-      "****************************************************************************************************\n",
-      "Epoch: [3/10] || Training Loss = 3.16 || Validation Loss: 3.06 || Time: 11.244599\n",
-      "****************************************************************************************************\n",
-      "Epoch: [4/10] || Step: [0/1563] || Average Training Loss: 3.2275\n",
-      "Epoch: [4/10] || Step: [500/1563] || Average Training Loss: 3.1555\n",
-      "Epoch: [4/10] || Step: [1000/1563] || Average Training Loss: 3.1467\n",
-      "Epoch: [4/10] || Step: [1500/1563] || Average Training Loss: 3.1431\n",
-      "Epoch: [4/10] || Step: [0/188] || Average Validation Loss: 3.2624\n",
-      "****************************************************************************************************\n",
-      "Epoch: [4/10] || Training Loss = 3.14 || Validation Loss: 3.06 || Time: 12.584878\n",
-      "****************************************************************************************************\n",
-      "Epoch: [5/10] || Step: [0/1563] || Average Training Loss: 3.2303\n",
-      "Epoch: [5/10] || Step: [500/1563] || Average Training Loss: 3.1283\n",
-      "Epoch: [5/10] || Step: [1000/1563] || Average Training Loss: 3.1332\n",
-      "Epoch: [5/10] || Step: [1500/1563] || Average Training Loss: 3.1327\n",
-      "Epoch: [5/10] || Step: [0/188] || Average Validation Loss: 3.2068\n",
-      "****************************************************************************************************\n",
-      "Epoch: [5/10] || Training Loss = 3.13 || Validation Loss: 3.06 || Time: 11.032440\n",
-      "****************************************************************************************************\n",
-      "Epoch: [6/10] || Step: [0/1563] || Average Training Loss: 2.8839\n",
-      "Epoch: [6/10] || Step: [500/1563] || Average Training Loss: 3.1190\n",
-      "Epoch: [6/10] || Step: [1000/1563] || Average Training Loss: 3.1215\n",
-      "Epoch: [6/10] || Step: [1500/1563] || Average Training Loss: 3.1245\n",
-      "Epoch: [6/10] || Step: [0/188] || Average Validation Loss: 3.1537\n",
-      "****************************************************************************************************\n",
-      "Epoch: [6/10] || Training Loss = 3.12 || Validation Loss: 3.04 || Time: 14.552815\n",
-      "****************************************************************************************************\n",
-      "Epoch: [7/10] || Step: [0/1563] || Average Training Loss: 3.3968\n",
-      "Epoch: [7/10] || Step: [500/1563] || Average Training Loss: 3.1164\n",
-      "Epoch: [7/10] || Step: [1000/1563] || Average Training Loss: 3.1138\n",
-      "Epoch: [7/10] || Step: [1500/1563] || Average Training Loss: 3.1165\n",
-      "Epoch: [7/10] || Step: [0/188] || Average Validation Loss: 3.0908\n",
-      "****************************************************************************************************\n",
-      "Epoch: [7/10] || Training Loss = 3.12 || Validation Loss: 3.04 || Time: 12.808037\n",
-      "****************************************************************************************************\n",
-      "Epoch: [8/10] || Step: [0/1563] || Average Training Loss: 3.2101\n",
-      "Epoch: [8/10] || Step: [500/1563] || Average Training Loss: 3.1075\n",
-      "Epoch: [8/10] || Step: [1000/1563] || Average Training Loss: 3.1121\n",
-      "Epoch: [8/10] || Step: [1500/1563] || Average Training Loss: 3.1156\n",
-      "Epoch: [8/10] || Step: [0/188] || Average Validation Loss: 3.1771\n",
-      "****************************************************************************************************\n",
-      "Epoch: [8/10] || Training Loss = 3.11 || Validation Loss: 3.03 || Time: 11.031873\n",
-      "****************************************************************************************************\n",
-      "Epoch: [9/10] || Step: [0/1563] || Average Training Loss: 3.1480\n",
-      "Epoch: [9/10] || Step: [500/1563] || Average Training Loss: 3.1066\n",
-      "Epoch: [9/10] || Step: [1000/1563] || Average Training Loss: 3.1101\n",
-      "Epoch: [9/10] || Step: [1500/1563] || Average Training Loss: 3.1075\n",
-      "Epoch: [9/10] || Step: [0/188] || Average Validation Loss: 3.1683\n",
-      "****************************************************************************************************\n",
-      "Epoch: [9/10] || Training Loss = 3.11 || Validation Loss: 3.03 || Time: 11.030580\n",
-      "****************************************************************************************************\n"
+      "Epoch: [0/1] || Step: [0/1563] || Average Training Loss: 8.1363\n"
      ]
     }
    ],
